--- a/src/Makefile.build
+++ b/src/Makefile.build
@@ -65,6 +65,7 @@ userprog_SRC += userprog/tss.c		# TSS management.
 vm_SRC = vm/frame.c					# Frame table.
 vm_SRC += vm/suppage.c 				# Supplemental page table.
 vm_SRC += vm/swap.c					# Swap table.
+vm_SRC += vm/mm.c					# File memory mapping.
 
 # Filesystem code.
 filesys_SRC  = filesys/filesys.c	# Filesystem core.
